# riscv

./: .disassm.txt.kate-swp  .gitattributes  .gitignore  LICENSE  Makefile  README.md  add.c  add.s  add.x  disassm.txt  fetch_tests.sh  main.cpp  riscv.cpp  riscv.hpp  riscv.md  run_tests.sh
src/dbg/: CMakeLists.txt  imgui.ini  main.cpp
src/dbg/ext/: glad.c  glad.h
src/riscv/: Makefile  core.cpp  core.hpp  decode.hpp  disassemble.cpp  disassemble.hpp  fetch_tests.sh  main.cpp  platform.hpp  riscv.cpp  riscv.hpp
